Add .sln file and fix dependency errors
The dependency errors are fixed by adding SpecFlow's github repo as a submodule
and updating the references to get the files from the submodule.

--- a/TechTalk.SpecFlow.Parser.Compatibility/TechTalk.SpecFlow.Parser.Compatibility.csproj
+++ b/TechTalk.SpecFlow.Parser.Compatibility/TechTalk.SpecFlow.Parser.Compatibility.csproj
@@ -9,12 +9,13 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TechTalk.SpecFlow.Parser.Compatibility</RootNamespace>
     <AssemblyName>TechTalk.SpecFlow.Parser.Compatibility</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>..\specflow.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>..\SpecFlow\specflow.snk</AssemblyOriginatorKeyFile>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -50,7 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\CommonAssemblyInfo.cs">
+    <Compile Include="..\SpecFlow\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -72,7 +73,7 @@
     <Compile Include="SyntaxElements\When.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TechTalk.SpecFlow.Parser\TechTalk.SpecFlow.Parser.csproj">
+    <ProjectReference Include="..\SpecFlow\TechTalk.SpecFlow.Parser\TechTalk.SpecFlow.Parser.csproj">
       <Project>{7ccef6d6-fc17-422e-9bed-edd752b6496f}</Project>
       <Name>TechTalk.SpecFlow.Parser</Name>
     </ProjectReference>
