--- a/TechTalk.SpecFlow.Tools/TechTalk.SpecFlow.Tools.csproj
+++ b/TechTalk.SpecFlow.Tools/TechTalk.SpecFlow.Tools.csproj
@@ -36,7 +36,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>..\specflow.ico</ApplicationIcon>
+    <ApplicationIcon>..\SpecFlow\specflow.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CommandLine, Version=2.2.1.0, Culture=neutral, PublicKeyToken=de6f01bd326f8c32, processorArchitecture=MSIL">
@@ -58,7 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\CommonAssemblyInfo.cs">
+    <Compile Include="..\SpecFlow\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="MsBuild\GeneratorTask.cs" />
@@ -75,11 +75,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TechTalk.SpecFlow.Generator\TechTalk.SpecFlow.Generator.csproj">
+    <ProjectReference Include="..\SpecFlow\TechTalk.SpecFlow.Generator\TechTalk.SpecFlow.Generator.csproj">
       <Project>{453D8014-B6CD-4E86-80A8-D59F59092334}</Project>
       <Name>TechTalk.SpecFlow.Generator</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TechTalk.SpecFlow.Parser\TechTalk.SpecFlow.Parser.csproj">
+    <ProjectReference Include="..\SpecFlow\TechTalk.SpecFlow.Parser\TechTalk.SpecFlow.Parser.csproj">
       <Project>{7CCEF6D6-FC17-422E-9BED-EDD752B6496F}</Project>
       <Name>TechTalk.SpecFlow.Parser</Name>
     </ProjectReference>
@@ -87,11 +87,11 @@
       <Project>{FC43509F-E7D3-40C4-B4C3-1E6C9D5530A4}</Project>
       <Name>TechTalk.SpecFlow.Reporting</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TechTalk.SpecFlow\TechTalk.SpecFlow.csproj">
+    <ProjectReference Include="..\SpecFlow\TechTalk.SpecFlow\TechTalk.SpecFlow.csproj">
       <Project>{413EE28C-4F89-4C6F-BA1E-2CDEE4CD43B4}</Project>
       <Name>TechTalk.SpecFlow</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TechTalk.SpecFlow.Utils\TechTalk.SpecFlow.Utils.csproj">
+    <ProjectReference Include="..\SpecFlow\TechTalk.SpecFlow.Utils\TechTalk.SpecFlow.Utils.csproj">
       <Project>{C0AF4A43-0C3B-47C7-86DE-79FB632B1453}</Project>
       <Name>TechTalk.SpecFlow.Utils</Name>
     </ProjectReference>
