--- a/TechTalk.SpecFlow.Reporting/TechTalk.SpecFlow.Reporting.csproj
+++ b/TechTalk.SpecFlow.Reporting/TechTalk.SpecFlow.Reporting.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -10,10 +10,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TechTalk.SpecFlow.Reporting</RootNamespace>
     <AssemblyName>TechTalk.SpecFlow.Reporting</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>..\specflow.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>..\SpecFlow\specflow.snk</AssemblyOriginatorKeyFile>
     <StartupObject>
     </StartupObject>
     <TargetFrameworkProfile />
@@ -61,13 +61,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\TechTalk.SpecFlow\PlatformCompatibility\ExceptionHelper.cs">
+    <Compile Include="..\SpecFlow\TechTalk.SpecFlow\PlatformCompatibility\ExceptionHelper.cs">
       <Link>PlatformCompatibility\ExceptionHelper.cs</Link>
     </Compile>
-    <Compile Include="..\TechTalk.SpecFlow\PlatformCompatibility\MonoHelper.cs">
+    <Compile Include="..\SpecFlow\TechTalk.SpecFlow\PlatformCompatibility\MonoHelper.cs">
       <Link>PlatformCompatibility\MonoHelper.cs</Link>
     </Compile>
-    <Compile Include="..\CommonAssemblyInfo.cs">
+    <Compile Include="..\SpecFlow\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="AssemblyServices.cs" />
@@ -110,15 +110,15 @@
     <EmbeddedResource Include="StepDefinitionReport\StepDefinitionReport.xslt" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TechTalk.SpecFlow.Generator\TechTalk.SpecFlow.Generator.csproj">
+    <ProjectReference Include="..\SpecFlow\TechTalk.SpecFlow.Generator\TechTalk.SpecFlow.Generator.csproj">
       <Project>{453D8014-B6CD-4E86-80A8-D59F59092334}</Project>
       <Name>TechTalk.SpecFlow.Generator</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TechTalk.SpecFlow.Parser\TechTalk.SpecFlow.Parser.csproj">
+    <ProjectReference Include="..\SpecFlow\TechTalk.SpecFlow.Parser\TechTalk.SpecFlow.Parser.csproj">
       <Project>{7CCEF6D6-FC17-422E-9BED-EDD752B6496F}</Project>
       <Name>TechTalk.SpecFlow.Parser</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TechTalk.SpecFlow\TechTalk.SpecFlow.csproj">
+    <ProjectReference Include="..\SpecFlow\TechTalk.SpecFlow\TechTalk.SpecFlow.csproj">
       <Project>{413EE28C-4F89-4C6F-BA1E-2CDEE4CD43B4}</Project>
       <Name>TechTalk.SpecFlow</Name>
     </ProjectReference>
